orishop-eks.yaml
---
# 2. TRIỂN KHAI ỨNG DỤNG LÊN CLUSTER (DEPLOYMENT)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orishop-app
spec:
  replicas: 2 # Chạy 2 Pod để đảm bảo không bao giờ sập web
  selector:
    matchLabels:
      app: orishop
  template:
    metadata:
      labels:
        app: orishop
    spec:
      serviceAccountName: orishop-sa # Giao thẻ nhân viên cho Pod
      containers:
      - name: orishop
        image: tobi1008/orishop:latest # Image sẽ được Jenkins đẩy lên
        ports:
        - containerPort: 8091
---
# 3. MỞ CỬA CHO KHÁCH HÀNG TRUY CẬP (LOAD BALANCER SERVICE)
apiVersion: v1
kind: Service
metadata:
  name: orishop-service
spec:
  type: LoadBalancer # Báo AWS cấp cho 1 cái tên miền (URL) Public
  selector:
    app: orishop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8091
