orishop-mysql.yaml
# 2. Triển khai Container MySQL (Deployment)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orishop-mysqldb
spec:
  selector:
    matchLabels:
      app: orishop-mysqldb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: orishop-mysqldb
    spec:
      containers:
      - name: orishop-mysqldb
        image: mysql:8.0.28
        args:
          - "--default-authentication-plugin=mysql_native_password"
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: orishop-mysql-pvc

---
# 3. Mở cổng mạng nội bộ (Service)
apiVersion: v1
kind: Service
metadata:
  name: orishop-mysqldb # Tên dịch vụ nội bộ để Webapp gọi sang
spec:
  selector:
    app: orishop-mysqldb
  ports:
    - port: 3306
