orishop-k8s.yaml
# 2. Deployment (Cách K8s chạy App và bơm cấu hình Database, mount thư mục ảnh)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orishop-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orishop
  template:
    metadata:
      labels:
        app: orishop
    spec:
      containers:
      - name: orishop-app
        image: tobi1008/orishop:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8091
        volumeMounts:
        - name: uploads-volume
          mountPath: /app/uploads
      volumes:
      - name: uploads-volume
        persistentVolumeClaim:
          claimName: orishop-uploads-pvc

---
# 3. Service (Cổng giao tiếp nội bộ K8s)
apiVersion: v1
kind: Service
metadata:
  name: orishop-service
spec:
  selector:
    app: orishop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8091

---
# 4. Ingress (Bảo vệ và điều hướng tên miền public CÓ SSL)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orishop-ingress
  annotations:
    # Gọi Cert-Manager đi xin SSL
    cert-manager.io/cluster-issuer: "letsencrypt-prod" 
spec:
  ingressClassName: traefik # Sử dụng Ingress Class thay vì annotation cũ
  tls:
  - hosts:
    - orishop.quyenlt.com
    secretName: orishop-tls-secret # Tên két sắt K8s sẽ tự động tạo để chứa chứng chỉ SSL
  rules:
  - host: orishop.quyenlt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: orishop-service
            port:
              number: 80
